--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>END IT//MAKE A POSTER</title>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.5/p5.js"></script>
+   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.js"></script>
    <script type="text/javascript" src="sketch.js"></script>
-   <script type="text/javascript" src="particle.js"></script>
    <style>
      body {
        margin: 0;
