--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html>
 <head>
   <title>END IT//MAKE A POSTER</title>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.5/p5.js"></script>
-   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.js"></script>
-   <script type="text/javascript" src="sketch.js"></script>
-   <style>
-     body {
-       margin: 0;
-       padding: 0;
-      }
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="jquery.duotone.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.5/p5.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.js"></script>
+  <script type="text/javascript" src="sketch.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
 
-      canvas {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    </style>
+    canvas {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
 </head>
 <body>
 </body>
